# open-lcc-rp2040-bianca

./: .gdbinit  CMakeLists.txt  README.md  memmap-no-boot2.ld
boards/: open_lcc_rev_a.h
esphome/: esp-protocol.h
lib/no-OS-FatFS/src/sd_driver/SDIO/: rp2040_sdio.c  sd_card_sdio.c
lib/rp2040-serial-bootloader/: CMakeLists.txt  bootloader.ld  combined.ld  gen_imghdr.py  main.c
src/: SystemStatus.h  esp-protocol.h  pins.h  smart_lcc.cpp  types.h
src/Controller/Core0/: SafePacketSender.h  SystemController.cpp  SystemController.h  SystemSettings.cpp  SystemSettings.h  lcc_protocol.cpp  lcc_protocol.h
src/Controller/Core0/Protocol/: control_board_protocol.cpp  lcc_protocol.cpp  lcc_protocol.h
src/Controller/Core0/Util/: HybridController.h  PIDController.h  TimedLatch.h
src/Controller/Core1/: Automations.cpp  Automations.h  Core1Controller.cpp  Core1Controller.h  Core1State.cpp  Core1State.h  EspFirmware.cpp  EspFirmware.h  MCP9600.cpp  MCP9600.h  SettingsFlash.cpp  SettingsFlash.h  SettingsManager.cpp  SettingsManager.h
src/Routine/: RoutineParser.cpp  RoutineParser.h  RoutineStep.cpp  RoutineStep.h  RoutineStepExitCondition.cpp  RoutineStepExitCondition.h
src/utils/: BufferReader.cpp  BufferReader.h  USBDebug.h  UartReadBlockingTimeout.h
